Changes
=======

2.6.2 (unreleased)
------------------

- Improve error message when a template is required for a component
  but cannot be found (Fix Launchpad issue #225855, #242698).

- Fix how the static resource are found. Instead of using as name the
  package name where the component is defined, using as name the
  package where the template for the component is defined, or the base
  component. This is done by setting an attribute ``__static_name__``
  on the component that specify which resource directory should be
  used. This fix missing resources when you extend the component and
  don't redefined the template.

2.6.1 (2011-06-28)
------------------

- Fix bug where zope.browserpage was not correctly declared as a dependency.

2.6 (2011-06-28)
----------------

- Add the ContentProvider component.

2.5 (2011-04-04)
----------------

- Fix a test that relied on older zope.testbrowser behaviour.

2.4 (2011-03-01)
----------------

- grok.View component can optionally use the ``grok.provides`` directive,
  specifying an interface that the component provides (instead of the
  zope.interface.Interface that views by default provide).

- Add a new ZCML directive, ``ignoreTemplates`` that let you configure which
  template filename pattern should be ignored by the template registry. The
  pattern attribute of the directive accepts regular expresssion that will be
  matched against the (template) file extension.

- Use the zope configuration action ordering feature to have templates
  registered for all packages and modules, before trying to associate the
  templates. Checking for unassociated templates is done very very late in the
  configuration action order.

- Inherited grok.template() information is looked up against the module of
  the view class that uses the grok.template() directive. This allows for
  subclassing view components that use the grok.template() directive from other
  packages.

2.3 (2011-01-04)
----------------
