@@ -1,0 +1,9 @@
+import grokcore.view as grok
+
+grok.templatedir('idontexit')
+
+class Mammoth(grok.Context):
+    pass
+
+class Food(grok.View):
+    pass
